# ApplicationEvaluator

./: .editorconfig  .env.dev  .env.example  .fvh-standards.yaml  .gitignore  .mcp.json  .pre-commit-config.yaml  .release-please-manifest.json  .secrets.baseline  CLAUDE.md  LICENSE.md  MIGRATION_GUIDE.md  README.md  SECURITY.md  biome.json  compose.yml  docker-compose.dev.yml  docker-compose.prod.yml  nginx.conf.sample  release-please-config.json  skaffold.yaml
.claude/: settings.json
.github/: dependabot.yml
.github/workflows/: auto-fix.yml  auto-merge-image-updater.yml  codeql.yml  container-build.yml  containers-backend.yaml  containers-frontend.yaml  dependency-review.yml  frontend.yml  pythonapp.yml  renovate.yml
application/: release-please-config.json  skaffold.yaml
application/.github/workflows/: container-build.yaml
deploy/: backend-values-local.yaml  backend-values.yaml  frontend-values-dev.yaml  frontend-values-local.yaml  frontend-values.yaml
django_server/: .coveragerc  .dockerignore  CHANGELOG.md  Dockerfile  Dockerfile.backend  Pipfile  generate_applications.py  manage.py  pyproject.toml  requirements.txt
django_server/application_evaluator/: admin.py  admin_site.py  apps.py  asgi.py  models.py  rest.py  settings.py  tests.py  views.py  wsgi.py
django_server/application_evaluator/management/commands/: __init__.py  close_challenge_3rd_round.py  email_users_3rd_round.py  import_applications_2nd_round.py  import_applications_3rd_round.py  import_applications_generic.py  import_applications_s4c.py  import_challenges_2nd_round.py  import_challenges_3rd_round.py  import_challenges_s4c.py  import_users_2nd_round.py  import_users_3rd_round.py  import_users_xslx.py
django_server/application_evaluator/migrations/: 0001_initial.py  0002_auto_20210126_1014.py  0003_criterion_public.py  0004_criteriongroup_threshold.py  0005_criteriongroup_abbr.py  0006_auto_20210202_0854.py  0007_comment.py  0008_applicationattachment.py  0009_applicationroundattachment.py  0010_delete_comment.py  0011_comment.py  0012_auto_20210210_1627.py  0013_applicationround_published.py  0014_applicationround_description.py  0015_auto_20210614_1254.py  0016_application_description.py  0017_applicationimport.py  0018_auto_20230316_1007.py  0019_auto_20230330_1428.py  0020_auto_20230402_1919.py  0021_auto_20230404_0941.py  0022_applicationround_admin.py  0023_application_application_id.py  0024_applicationround_city_alter_application_name_and_more.py  0025_application_other_id.py  0026_application_visibility.py
django_server/application_evaluator/tests/: __init__.py  applications.csv  conftest.py  test_auth.py  test_models.py  test_rest.py
django_server/application_evaluator_config/: admin_site.py  apps.py  asgi.py  settings.py  urls.py  wsgi.py
django_server/scripts/: README.md  extract_data_from_cc_3rd_webpage.py  jury_member_report_cc_3rd.py
django_server/templates/registration/: password_reset_email.html
docs/: health-history.json
docs/v2_specification/: specification_v2.0.md
k8s/: backend-values-local.yaml  frontend-values-local.yaml
react_ui/: .dockerignore  CHANGELOG.md  Dockerfile  Dockerfile.frontend  biome.json  docker-entrypoint.sh  nginx-main.conf  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.js  vite.config.ts  vitest.config.ts
react_ui/public/: config.js  config.js.template  index.html  terms.html
react_ui/src/: ApplicationEvaluatorUI.tsx  index.html  index.js  index.jsx  index.scss  index.tsx  serviceWorker.js  sessionRequest.js  settings.dev.json  settings.prod.json  settings.ts  setupTests.ts  urls.ts  vite-env.d.ts
react_ui/src/components/: ApplicationApproveWidget.tsx  ApplicationRoundCard.tsx  ApplicationRounds.tsx  ApplicationScores.tsx  ApplicationScoresTable.tsx  CriterionGroup.tsx  CriterionScore.tsx  ExportScoresWidget.tsx  LoadScreen.tsx  LoginScreen.tsx  ResetPasswordScreen.tsx  Terms.tsx  types.ts  utils.ts
react_ui/src/util_components/: Select.tsx
react_ui/src/util_components/account/: LoginForm.tsx  ResetPasswordForm.tsx
react_ui/src/util_components/bootstrap/: Card.tsx  CenteredSpinner.tsx  Confirm.tsx  ConfirmButton.tsx  ErrorAlert.tsx  Icon.tsx  Modal.tsx  NavBar.tsx  NavPills.tsx
react_ui/tests/: example.test.tsx  setup.ts
react_ui/tests/components/: ApplicationRounds.test.tsx  CriterionScore.test.tsx  ErrorAlert.test.tsx  LoadScreen.test.tsx  utils.test.ts
