[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "application-evaluator"
version = "0.1.0"
description = "FVH Application Evaluator - web app for collaboratively evaluating applications by weighted criteria"
requires-python = ">=3.9"
dependencies = [
    "django>=3.0,<4.0",
    "djangorestframework>=3.10",
    "pyaml>=19.4",
    "uritemplate>=3.0",
    "coreapi>=2.3",
    "django-cors-headers>=3.2",
    "django-rest-auth>=0.9",
    "jsonschema>=3.2",
    "psycopg2-binary>2.8",
    "gunicorn>=20.0",
    "sentry-sdk>=2.0.0",
    "elastic-apm>=5.5",
    "dj-inmemorystorage",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "coverage>=5.0",
    "pip-audit>=2.7.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-django>=4.5.0",
]

[tool.ruff]
# Target Python version
target-version = "py311"

# Line length (matches legacy flake8 setting)
line-length = 120

# Exclude directories
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "migrations",
    "dist",
    "build",
    "*.egg-info",
]

[tool.ruff.lint]
# Rule selection
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "PTH",    # flake8-use-pathlib
    "RUF",    # Ruff-specific rules
    "DJ",     # flake8-django
]

# Rules to ignore
ignore = [
    "E501",   # Line too long (handled by formatter)
    "RUF012", # Mutable class attributes - common Django pattern, ignore for now
    "DJ006",  # Exclude with ModelForm - legacy code, fix later
    "DJ012",  # Django model ordering - legacy code, fix later
    "N806",   # Variable naming - legacy code, fix later
    "PTH123", # Path.open - legacy code, fix later
    "B904",   # Raise from - legacy code, fix later
    "E402",   # Module level import - required for Django setup scripts
]

# Per-file ignores
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]  # Unused imports in __init__.py, wildcard imports
"tests/**/*.py" = ["S101"]  # Use of assert in tests
"*/tests/*.py" = ["S101"]  # Use of assert in tests

[tool.ruff.lint.isort]
known-first-party = ["application_evaluator", "application_evaluator_config"]
force-sort-within-sections = true

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.format]
# Formatter options
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "application_evaluator_config.settings"
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
testpaths = ["application_evaluator/tests"]
addopts = [
    "-v",
    "--strict-markers",
    "--strict-config",
    "--cov=application_evaluator",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-fail-under=80",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
]

[tool.coverage.run]
source = ["application_evaluator"]
omit = ["*/migrations/*", "*/venv/*", "*/tests/*", "*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

[tool.setuptools.packages.find]
include = ["application_evaluator*", "application_evaluator_config*"]
exclude = ["templates*"]
